--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div>
                 <div class="div_center">
                     <h3 id="header_title">QQ跑团记录着色器</h3>
-                    <h5 id="header_version">v2.6 南宫专用版 by 风羽(溯洄改)</h5>
+                    <h5 id="header_version">v2.6 by 风羽(溯洄改)</h5>
                 </div>
                 <div class="div_italic">
                     <a href="http://aligo.github.io/log-colourer.js">前辈的mirc版传送门</a><br>
@@ -269,7 +269,7 @@
                 <p style="text-align:center; margin-top:20px; color:#878b91">
                     原作者：风羽 Copyright ©2017-2019 hina.moe<br>
                     修改：溯洄 Copyright ©2018-2021 kokona.tech<br>
-                    二改：南宫 Copyright ©2022-2025 xenport.com
+                    维护：南宫 Copyright ©2022-2025 xenport.com
                 </p>
             </footer>
         </div>
